tests/ui/loop-match/invalid-attribute.stderr
error: `#[loop_match]` attribute cannot be used on crates
  --> $DIR/invalid-attribute.rs:6:1
   |
LL | #![loop_match]
   | ^^^^^^^^^^^^^^
   |
   = help: `#[loop_match]` can only be applied to loops

error: `#[const_continue]` attribute cannot be used on crates
  --> $DIR/invalid-attribute.rs:7:1
   |
LL | #![const_continue]
   | ^^^^^^^^^^^^^^^^^^
   |
   = help: `#[const_continue]` can only be applied to break expressions

error: `#[loop_match]` attribute cannot be used on foreign functions
  --> $DIR/invalid-attribute.rs:10:5
   |
LL |     #[loop_match]
   |     ^^^^^^^^^^^^^
   |
   = help: `#[loop_match]` can only be applied to loops

error: `#[const_continue]` attribute cannot be used on foreign functions
  --> $DIR/invalid-attribute.rs:11:5
   |
LL |     #[const_continue]
   |     ^^^^^^^^^^^^^^^^^
   |
   = help: `#[const_continue]` can only be applied to break expressions

error: `#[loop_match]` attribute cannot be used on structs
  --> $DIR/invalid-attribute.rs:15:1
   |
LL | #[loop_match]
   | ^^^^^^^^^^^^^
   |
   = help: `#[loop_match]` can only be applied to loops

error: `#[const_continue]` attribute cannot be used on structs
  --> $DIR/invalid-attribute.rs:16:1
   |
LL | #[const_continue]
   | ^^^^^^^^^^^^^^^^^
   |
   = help: `#[const_continue]` can only be applied to break expressions

error: `#[loop_match]` attribute cannot be used on required trait methods
  --> $DIR/invalid-attribute.rs:24:5
   |
LL |     #[loop_match]
   |     ^^^^^^^^^^^^^
   |
   = help: `#[loop_match]` can only be applied to loops

error: `#[const_continue]` attribute cannot be used on required trait methods
  --> $DIR/invalid-attribute.rs:25:5
   |
LL |     #[const_continue]
   |     ^^^^^^^^^^^^^^^^^
   |
   = help: `#[const_continue]` can only be applied to break expressions

error: `#[loop_match]` attribute cannot be used on functions
  --> $DIR/invalid-attribute.rs:29:1
   |
LL | #[loop_match]
   | ^^^^^^^^^^^^^
   |
   = help: `#[loop_match]` can only be applied to loops

error: `#[const_continue]` attribute cannot be used on functions
  --> $DIR/invalid-attribute.rs:30:1
   |
LL | #[const_continue]
   | ^^^^^^^^^^^^^^^^^
   |
   = help: `#[const_continue]` can only be applied to break expressions

error: `#[loop_match]` attribute cannot be used on closures
  --> $DIR/invalid-attribute.rs:34:5
   |
LL |     #[loop_match]
   |     ^^^^^^^^^^^^^
   |
   = help: `#[loop_match]` can only be applied to loops

error: `#[const_continue]` attribute cannot be used on closures
  --> $DIR/invalid-attribute.rs:35:5
   |
LL |     #[const_continue]
   |     ^^^^^^^^^^^^^^^^^
   |
   = help: `#[const_continue]` can only be applied to break expressions

error: `#[loop_match]` attribute cannot be used on expressions
  --> $DIR/invalid-attribute.rs:39:9
   |
LL |         #[loop_match]
   |         ^^^^^^^^^^^^^
   |
   = help: `#[loop_match]` can only be applied to loops

error: `#[const_continue]` attribute cannot be used on expressions
  --> $DIR/invalid-attribute.rs:40:9
   |
LL |         #[const_continue]
   |         ^^^^^^^^^^^^^^^^^
   |
   = help: `#[const_continue]` can only be applied to break expressions

error: aborting due to 14 previous errors

